log
Sun 07 May 2023 02:44:56 AM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++--
 1 file changed, 39 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
89cdb1d
Sun 07 May 2023 02:50:21 AM UTC: 
 sudoku.c | 87 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 86 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
3730607
Sun 07 May 2023 02:52:54 AM UTC: 
 tests:  6|2
total_score: 45/70
9452b8a
Sun 07 May 2023 02:54:34 AM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
b7d4bcf
Sun 07 May 2023 02:55:54 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
468512c
Sun 07 May 2023 02:57:03 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
test.c: In function ‘DFS’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8481d87
